cabal-version:      3.0
name:               hogodoro
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Josh Brown
maintainer:         joshcarlbrown@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Timer
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0,
                      brick
    hs-source-dirs:   src
    default-language: GHC2024

executable hogodoro
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        hogodoro,

    hs-source-dirs:   app
    default-language: GHC2024
