cabal-version:      3.0
name:               tomo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Josh Brown
maintainer:         joshcarlbrown@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common ghc-opts
  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Winvalid-haddock
      -Wno-unticked-promoted-constructors
      -Wno-unused-do-bind
      -Wpartial-fields
      -Wredundant-constraints
      -Wunused-packages
      -fhide-source-paths
      -funbox-strict-fields

library
    import:           ghc-opts
    exposed-modules:  Timer,
                      Ui,
                      Pomodoro,
                      Util,
                      Stats,
                      Tasks
    -- other-modules:
    -- other-extensions:
    default-extensions: TemplateHaskell
    build-depends:    base ^>=4.20.0.0,
                      vty,
                      vty-crossplatform,
                      time,
                      mtl,
                      microlens,
                      microlens-mtl,
                      microlens-th,
                      text,
                      process,
                      containers,
                      filepath,
                      aeson,
                      bytestring,
                      directory,
                      brick
    hs-source-dirs:   src
    ghc-options: -threaded
    default-language: GHC2024

executable tomo
    import:           ghc-opts
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.20.0.0,
        tomo,

    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts
    default-language: GHC2024
